--- a/css/style.css
+++ b/css/style.css
@@ -5,4 +5,21 @@ html, body {
   canvas {
     display: block;
   }
-  
+  #sketch-container{
+    width: 100%;
+    height: 100%;
+  }
+  #sketch-container.p {
+  position: fixed;
+  text-align: center;
+  top: 40px;
+  left: 100px;
+  z-index: 100;
+  width: 270px;
+  padding: 10px;
+  }
+
+  .part2 {
+    
+    /* text-align: center; */
+  }
