--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,15 @@
 html, body {
     margin: 0;
     padding: 0;
+    font-family: "Trebuchet MS", Verdana, fantasy;
   }
   canvas {
     display: block;
   }
-  #sketch-container{
+ #sketch-container{
     width: 100%;
     height: 100%;
+    z-index: -1;
   }
   #sketch-container.p {
   position: fixed;
@@ -18,7 +20,55 @@ html, body {
   width: 270px;
   padding: 10px;
   }
-  
+#text-container{
+    position: fixed;
+    top: 30px;
+    right: 30px;
+    z-index: 100;
+    padding: 10px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    background-color: rgb(124, 92, 23);
+  }
+  #sketch-container-2{
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+  #text-container-2{
+    position: fixed;
+    bottom: 50px;
+    z-index: 100;
+    padding: 10px;
+    border-radius: 10px;
+    box-sizing: border-box;
+    background-color: rgb(124, 92, 23);
+  }
+  #sketch-container-3{
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+  #text-container-3{
+    position:fixed;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%;
+    padding: 5px;
+  }
+  #sketch-container-4{
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+  #text-container-4{
+    font-size: 20px;
+    position:fixed;
+    margin-top: 50px;
+    text-align: center;
+    width: 60%;
+    padding: 5px;
+  }
   .nextPage{
     text-align: center;
     color: #BAE498;
@@ -66,4 +116,10 @@ html, body {
     border-bottom: 1px solid;
     background: #BAE498;
   }
-
+#credit{
+  line-height: 100px;
+  height: 200px;
+  text-align: center;
+  align-items: center;
+  font-size: 30px;
+}
